# uv_template_AI

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: .env_example  app.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  test.py  test2.py
app/core/: llm.py
app/data/: data.csv
app/scripts/: ingest.py
app/templates/: vraag.html
db_init/: init.sql
